    after which it will be removed.  The warning has ID
    "Octave:quadcc:RelTol-conversion" and can be disabled with

      warning ("off", "Octave:quadcc:RelTol-conversion")

 ** The qr function now returns a standard factorization unless
    explicitly instructed to perform an economy factorization by using a
    final argument of 0.

 ** The FLTK toolkit is no longer prioritized for development.  The
    number of Octave Maintainers is too small to support three different
    graphic toolkits.  New development will target the Qt toolkit.
    While no longer prioritized, the FLTK toolkit is not deprecated and
    there is no schedule for its removal.

 ** The graphic object property "PickableParts" has been implemented
    which controls whether an object can accept mouse clicks.

 ** The graphic object property "Interruptible" has been fully
    implemented which controls whether a running callback function can
    be interrupted by another callback function.

 ** The graphic object property "HitTest" has been updated to be fully
    compatible with Matlab.

 ** Text objects now implement the properties "BackgroundColor",
    "EdgeColor", "LineStyle", "LineWidth", and "Margin".

 ** An initial implementation of alpha transparency has been made for
    patch and surface objects.  Printing to svg and pdf is supported.

 ** ishandle now returns true for both graphics handle objects and
    Java objects.  The latter change was made for Matlab compatibility.
    Use ishghandle or isgraphics if it is important not to include Java
    objects.

 ** The following statistical functions have been moved from core
    Octave to the statistics package available from Octave Forge.

    BASE
      cloglog.m
      table.m --renamed to --> crosstab.m
      logit.m
      prctile.m
      probit.m
      qqplot.m

    DISTRIBUTIONS
      betacdf.m
      betainv.m
      betapdf.m
      betarnd.m
      binocdf.m
      binoinv.m
      binopdf.m
      binornd.m
      cauchy_cdf.m