@@ -152,7 +152,8 @@ function opts = __opengl_print__ (opts)
 
     if (strcmp (get (opts.figure, "visible"), "on")
         || (strcmp (get (opts.figure, "__graphics_toolkit__"), "qt")
-            && strcmp (get (opts.figure, "__gl_window__"), "on")))
+            && (strcmp (get (opts.figure, "__gl_window__"), "on")
+                || __have_feature__ ("QOFFSCREENSURFACE"))))
       ## Use toolkits "print_figure" method
       drawnow (gl2ps_device{n}, ['|' pipeline{n}]);
     else
